--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ h2 {
     text-align: center;
 }
 
-/* TITLE */
+/* HERO */
 
 header  {
     width: 90%;
@@ -40,60 +40,35 @@ header  {
 /* CONTENT LAYOUT */
 main {
     width: 90%;
-    height: 90vh;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(10, 1fr);
-    grid-row-gap: 3%;
     justify-items: center;
     background-color: #FAFBFF;
     border: 1px solid #D6E0E9;
+    margin-bottom: 2rem;
+}
+.column {
+    display: grid;
+    width: 100%;
+    height: 80vh;
+    grid-template-rows: repeat(9, 1fr);
+    justify-items: center;
+    grid-row-gap: 3%;
     padding-bottom: 2rem;
 }
-.column1 {
-    grid-column: 1 / 2;
+.knowledge {
+    grid-column: 1 / span 1;
 }
-.column2 {
-    grid-column: 2 / 3;
+.platforms {
+    grid-column: 2 / span 1;
 }
-.column3 {
-    grid-column: 3 / 4;
+.resources {
+    grid-column: 3 / span 1;
 }
-.column4 {
-    grid-column: 4 / 5;
+.hr {
+    grid-column: 4 / span 1;
 }
-.row1 {
-    grid-row: 1 / 2;
-}
-.row2 {
-    grid-row: 2 / 3;
-}
-.row3 {
-    grid-row: 3 / 4;
-}
-.row4 {
-    grid-row: 4 / 5;
-}
-.row5 {
-    grid-row: 5 / 6;
-}
-.row6 {
-    grid-row: 6 / 7;
-}
-.row7 {
-    grid-row: 7 / 8;
-}
-.row8 {
-    grid-row: 8 / 9;
-}
-.row9 {
-    grid-row: 9 / 10;
-}
-.row10 {
-    grid-row: 10 / 11;
-}
-
 
 /* SEARCH BAR STYLES */
 form {
@@ -108,6 +83,14 @@ input {
     font-size: 1.2rem;
     background-color: #FAFBFF;
     border: 1px solid #D6E0E9;
+}
+
+/* TITLE STYLES */
+h2 {
+    display: block;
+    height: 60%;
+    width: 70%;
+    border-bottom: 1px solid #D6E0E9;
 }
 
 
